Fixed minor CSS issues, improved readability and added transitions

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 .App {
     background-color: gainsboro;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
