--- a/src/components/color-picker/color-picker.css
+++ b/src/components/color-picker/color-picker.css
@@ -3,5 +3,11 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     grid-gap: 1rem;
-    width: 100%;
+    padding: 0;
+    margin: 0;
+    max-width: 100%;
+    width: 95%;
+    height: 95%;
+    justify-self: center;
+    align-self: center;
 }
